# routers/commentsRouter_controllers_admin.go
@@ -31,4 +31,12 @@ func init() {
 			MethodParams: param.Make(),
 			Params: nil})
 
+	beego.GlobalControllerRouter["libertyblog/controllers/admin:PhotoController"] = append(beego.GlobalControllerRouter["libertyblog/controllers/admin:PhotoController"],
+		beego.ControllerComments{
+			Method: "UploadPhotos",
+			Router: `/admin/photo/upload`,
+			AllowHTTPMethods: []string{"post"},
+			MethodParams: param.Make(),
+			Params: nil})
+
 }
